Working with swagger, oauth2.0, and jwt
