# routes/achievements.ts
@@ -8,6 +8,7 @@ import {
     getUserAchievements,
 } from "../controllers/achievements";
 import handleErrors from "../utilities";
+import { authenticateJWT } from "../controllers/authentication";
 
 const achievementsRouter = express.Router();
 
@@ -55,10 +56,12 @@ achievementsRouter.get(
 // Create Achievement Route
 achievementsRouter.post(
     "/",
+    authenticateJWT,
     handleErrors(createAchievement),
     /*  
     #swagger.tags = ['Achievements']
     #swagger.description = 'Create a new achievement'
+    #swagger.security = [{ "BearerAuth": [] }, { "OAuth2": ["openid", "profile", "email"] }]
     #swagger.parameters['body'] = {
         "in": "body",
         "required": true,
@@ -80,10 +83,12 @@ achievementsRouter.post(
 // Delete Achievement Route
 achievementsRouter.delete(
     "/:id",
+    authenticateJWT,
     handleErrors(deleteAchievement),
     /*  
     #swagger.tags = ['Achievements']
     #swagger.description = 'Delete an achievement by ID'
+    #swagger.security = [{ "BearerAuth": [] }, { "OAuth2": ["openid", "profile", "email"] }]
     #swagger.parameters['id'] = {
         "in": "path",
         "required": true,
@@ -105,10 +110,12 @@ achievementsRouter.delete(
 // Update Achievement Route
 achievementsRouter.put(
     "/:id",
+    authenticateJWT,
     handleErrors(updateAchievement),
     /*  
     #swagger.tags = ['Achievements']
     #swagger.description = 'Update an existing achievement'
+    #swagger.security = [{ "BearerAuth": [] }, { "OAuth2": ["openid", "profile", "email"] }]
     #swagger.parameters['id'] = {
         "in": "path",
         "required": true,
@@ -139,10 +146,12 @@ achievementsRouter.put(
 // Get User Achievements Route
 achievementsRouter.get(
     "/user/:userId",
+    authenticateJWT,
     handleErrors(getUserAchievements),
     /*  
     #swagger.tags = ['Achievements']
     #swagger.description = 'Retrieve achievements for a specific user'
+    #swagger.security = [{ "BearerAuth": [] }, { "OAuth2": ["openid", "profile", "email"] }]
     #swagger.parameters['userId'] = {
         "in": "path",
         "required": true,
