# routes/index.ts
@@ -5,10 +5,12 @@ import usersRouter from "./users";
 import exercisesRouter from "./exercises";
 import metricsRouter from "./health-metrics";
 import workoutsRouter from "./workouts";
-import { isAuthenticated } from "../controllers/authentication"; // Import the isAuthenticated middleware
 import swaggerRouter from "./swagger";
 
 const router = express.Router();
+
+// Swagger route (public, GET)
+router.use("/api-docs", swaggerRouter);
 
 // Home route (public, GET)
 router.get("/", (req, res) => {
@@ -17,18 +19,6 @@ router.get("/", (req, res) => {
 
 // Authentication route (public, GET)
 router.use("/authentication", authenticationRouter);
-
-// Swagger route (public, GET)
-router.use("/api-docs", swaggerRouter);
-
-// Apply the isAuthenticated middleware to all non-GET routes globally
-router.use((req, res, next) => {
-    if (req.method !== "GET") {
-        // Apply isAuthenticated middleware to all non-GET routes
-        return isAuthenticated(req, res, next);
-    }
-    next(); // Skip isAuthenticated middleware for GET requests
-});
 
 // Register routes
 router.use("/users", usersRouter);
